--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,7 @@
 .fundo-opaco{
     padding-top: 30px;
     padding-bottom: 30px;
-    background-color: rgb(49, 47, 47, 0.50);
+    background-color: rgb(255, 0, 0);
     display: flex;
     justify-content: center;
 
