--- a/Style.css
+++ b/Style.css
@@ -25,7 +25,6 @@
 }
 
 .letras{
-    padding: 0 40px 0 40px;
     min-width: 480px;
     display: flex;
     align-items: center;
@@ -47,12 +46,17 @@
     flex-direction: column;
 }
 
-.header-inv2{
-    width: 1240px;
-    padding-top: 30px;
+.hero-inv1{
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    
+    justify-content: center;
+}
+
+.hero-inv2{
+    padding: 30px 40px 30px 40px;
+width: 1240px;
+display: flex;
+justify-content: space-between;
 }
 
 .fundo-opaco2{
@@ -71,14 +75,15 @@
     line-height: 40px;
 }
 
-.galaxia_azul{
-background-image: url(img/galaxia\ azul.png);
-width: 430px;
-height: 430px;
-padding-right: 30px;
+.fundo-opaco3{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     .header-inv{
         flex-direction: column;
     }
@@ -86,4 +91,22 @@ padding-right: 30px;
         flex-direction: column;
         padding-top: 30px;
     }
-}
+
+    .fundo-opaco2{
+        border-radius: 0px;
+       width: auto;
+       height: auto;
+      
+    }
+
+    .hero-inv2{
+        flex-direction: column;
+        padding: 30px 0px 0px 0px;
+        width: 100%;
+    }
+
+    .galaxia_azul{
+        width:100%;  
+    }
+    
+    }
