--- a/Style.css
+++ b/Style.css
@@ -31,7 +31,7 @@
     gap: 40px;
 }
 
-.inkut{
+.inkut, h1{
     color: white;
     font-family: 'Inknut Antiqua', serif;
     font-weight: 400;
@@ -80,8 +80,35 @@ justify-content: space-between;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 10px;
+    padding: 36px 100px 36px 100px;
 }
+
+.galaxias_base{
+    background-image: url(img/360_F_553430808_tCzpKIyPiZWaN1g27jJwUDE1hT0jmeqg\ 2\ \(1\).png);
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.galaxias_base_inv{
+    width: 1240px;
+    height: auto;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 100px 20px 100px;
+}
+
+
+
+
+
 
 @media (max-width: 1000px) {
     .header-inv{
@@ -109,4 +136,8 @@ justify-content: space-between;
         width:100%;  
     }
     
+    .galaxias_base_inv{
+        width: auto;
+        flex-direction: column;
+    }
     }
